# Self_Drivign_ros2_cpp

./: CMakeLists.txt  README.md  package.xml
config/: config.cpp
include/self_driving_cpp/: color_segmentation.h  config.h  drive_bot.h  lane_detection.h  morphology.h
launch/: self_driving_world_launch.py  world_launch.py
scripts/: lights_spawner.bash
src/: computer_vision_node.cpp  drive_bot.cpp  self_driving_node.cpp  spawner_node.cpp  video_recorder.cpp
src/Detection/Lanes/: color_segmentation.cpp  lane_detection.cpp  morphology.cpp
worlds/: Lane_follow_test.world  maze_solving.world  self_driving_car.world
